# ur

./: .gitignore  CMakeLists.txt  README.md  cgitrc  helper.cpp  helper.h  helper.hpp  random.cpp  reformat  tasks.txt  timedLatch.cpp  timedLatch.hpp  ur.cpp
res/: icon.aseprite  ur.aseprite
src/: helper.cpp  helper.hpp  icon.h  log.hpp  random.cpp  random.hpp  timedLatch.cpp  timedLatch.hpp  ur.cpp
